Update assets and enhance styling for login and home pages; improve animations and add startup section functionality

--- a/style/login.css
+++ b/style/login.css
@@ -6,7 +6,9 @@ body {
   background-color: var(--bg-light);
 }
 
-h3 {
+.forgot-password-box h3,
+.register-box h3,
+#login-content h3 {
   font-size: 28px;
 }
 
