--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-white pt-4 pb-2">
+<footer id="about" class="bg-dark text-white pt-4 pb-2">
   <div class="container">
     <div class="row">
       <!-- Cột 1: Logo & Giới thiệu -->
