--- a/components/header.html
+++ b/components/header.html
@@ -34,7 +34,7 @@
               </li>
               <li><a class="dropdown-item fw-bold" href="#">Startup</a></li>
               <li><a class="dropdown-item fw-bold" href="#">News</a></li>
-              <li><a class="dropdown-item fw-bold" href="#">About</a></li>
+              <li><a class="dropdown-item fw-bold" href="#about">About</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +54,7 @@
               <a class="nav-link fw-bold" href="#">News</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">About</a>
+              <a class="nav-link fw-bold" href="#about">About</a>
             </li>
           </ul>
         </div>
