--- a/style/home.css
+++ b/style/home.css
@@ -4,27 +4,104 @@
   position: relative;
   width: 100%;
   height: 620px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  padding: 30px;
 }
 
-.rocket {
-  width: 200px;
+#rocket {
+  width: 40%;
+  max-width: 430px;
   position: absolute;
+  left: 55%;
   bottom: 80px;
-  transform: rotate(45deg);
-  transition: transform 0.5s ease-out;
+  animation: rocketAppear 1.5s ease-out;
+}
+
+@keyframes rocketAppear {
+  from {
+    opacity: 0;
+    transform: translate(-80px, 80px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate(0px, 0px);
+  }
 }
 
 .fire {
-  width: 100px;
+  width: 30%;
+  max-width: 200px;
   position: absolute;
-  bottom: 40px;
-  left: 40%;
-  opacity: 0;
-  transform: rotate(225deg);
-  transition: opacity transform 1.5s ease-out;
+  bottom: 10px;
+  left: 50%;
+  opacity: 1;
+  animation: rocketAppear 1.5s ease-out;
+}
+
+.rocket-title,
+.rocket-desc {
+  width: 40%;
+}
+
+@media (max-width: 992px) {
+  .rocket-title,
+  .rocket-desc {
+    width: 100%;
+  }
+}
+
+.rocket-title {
+  animation: fadeInUp 1s ease-out;
+}
+
+.rocket-desc:nth-child(0) {
+  animation: fadeInUp 1.2s ease-out;
+}
+
+.rocket-desc:nth-child(1) {
+  animation: fadeInUp 1.4s ease-out;
+}
+
+.rocket-desc:nth-child(2) {
+  animation: fadeInUp 1.8s ease-out;
+}
+
+.rocket-desc:nth-child(3) {
+  animation: fadeInUp 2s ease-out;
+}
+
+.rocket-desc:nth-child(4) {
+  animation: fadeInUp 2.2s ease-out;
+}
+
+.rocket-desc:nth-child(5) {
+  animation: fadeInUp 2.4s ease-out;
+}
+
+.rocket-desc:nth-child(6) {
+  animation: fadeInUp 2.6s ease-out;
+}
+
+.rocket-container .btn-primary {
+  animation: fadeInUp 1.6s ease-out;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.logo-cooperator {
+  width: 25px;
+  height: 25px;
+  border-radius: 5px;
 }
 
 /* !Search */
@@ -94,7 +171,58 @@
   width: 60%;
 }
 
+/* !Startup */
 .startup-container {
   background-color: var(--primary-color);
-  padding: 20px;
+  padding: 30px;
+}
+
+.startup-section {
+  width: 80%;
+}
+
+.startup-item {
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  padding: 0px;
+  width: 30%;
+  min-width: 300px;
+  max-width: 320px;
+  border-radius: 20px;
+  border: none;
+}
+
+.startup-item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.startup-img {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.card-body {
+  background-color: #f8f9fa;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+#prevBtn,
+#nextBtn {
+  border: none;
+  width: 50px;
+  height: 50px;
+  color: white;
+  background-color: transparent;
+  border-radius: 10px;
+}
+
+.fa-chevron-right,
+.fa-chevron-left {
+  font-size: 30px;
+}
+
+#prevBtn:hover,
+#nextBtn:hover {
+  background-color: var(--primary-hover);
 }
