--- a/style/home.css
+++ b/style/home.css
@@ -1,6 +1,8 @@
 /* Rocket Animation */
 .rocket-container {
-  background-color: black;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../assets/univer-background.png");
+  background-size: cover;
   position: relative;
   width: 100%;
   height: 620px;
@@ -174,19 +176,15 @@
 /* !Startup */
 .startup-container {
   background-color: var(--primary-color);
-  padding: 30px;
-}
-
-.startup-section {
-  width: 80%;
+  padding: 40px;
 }
 
 .startup-item {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   padding: 0px;
   width: 30%;
-  min-width: 300px;
-  max-width: 320px;
+  min-width: 250px;
+  max-width: 275px;
   border-radius: 20px;
   border: none;
 }
@@ -197,6 +195,7 @@
 }
 
 .startup-img {
+  object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -220,9 +219,113 @@
 .fa-chevron-right,
 .fa-chevron-left {
   font-size: 30px;
+  transform: translateY(2px);
 }
 
 #prevBtn:hover,
 #nextBtn:hover {
-  background-color: var(--primary-hover);
+  background-color: var(--primary-light);
+}
+
+.see-more-link span {
+  margin-right: 10px;
+}
+
+.see-more-link i {
+  transition: transform 0.3s ease-in-out;
+}
+
+.see-more-link:hover i {
+  transform: translateX(5px);
+}
+
+.startup-container .intro-feature {
+  padding-right: 120px;
+}
+
+.startup-container .intro-feature .see-more-link i,
+.startup-container .intro-feature .see-more-link span {
+  color: var(--text-light);
+  transition: color 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.startup-container .intro-feature .see-more-link:hover i,
+.startup-container .intro-feature .see-more-link:hover span {
+  color: var(--primary-hover);
+}
+
+.startup-main-info-box {
+  background-color: var(--background-color);
+}
+
+.startup-main-desc {
+  padding: 10px;
+}
+
+.startup-main-img {
+  width: 100%;
+}
+
+.startup-main-desc .description-container {
+  height: 100px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background-color: #f9f9f9;
+}
+
+.startup-main-desc .description-container::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* News */
+.news-container .intro-feature .see-more-link i,
+.news-container .intro-feature .see-more-link span {
+  color: var(--primary-color);
+  transition: color 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.news-container .intro-feature .see-more-link:hover i,
+.news-container .intro-feature .see-more-link:hover span {
+  color: var(--primary-hover);
+}
+
+.news-list {
+  padding: 0px 30px;
+}
+
+.news-img {
+  height: 200px;
+  object-fit: cover;
+  padding: 0px;
+}
+
+.news-item {
+  width: 90%;
+  height: 200px;
+  padding: 0px;
+}
+
+.news-content-box {
+  padding: 10px;
+}
+
+.author-img {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.news-title {
+  font-size: 20px;
+  transition: color 0.5s ease-in-out, transform 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.news-title:hover {
+  color: var(--primary-hover) !important;
+  transform: translateX(3px);
 }
