--- a/style/variables.css
+++ b/style/variables.css
@@ -79,6 +79,28 @@ a {
   hyphens: auto;
 }
 
+.btn-outline-primary {
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+}
+
+.btn-outline-primary:hover {
+  background-color: var(--primary-hover);
+  color: var(--text-light);
+  border: 2px solid var(--primary-hover);
+}
+
+.btn-outline-success {
+  color: var(--secondary-color);
+  border: 2px solid var(--secondary-color);
+}
+
+.btn-outline-success:hover {
+  color: var(--secondary-hover);
+  border: 2px solid var(--secondary-hover);
+  color: var(--text-light);
+}
+
 .line-clamp-2 {
   display: -webkit-box;
   -webkit-line-clamp: 2; /* Giới hạn tối đa 2 dòng */
@@ -99,4 +121,16 @@ a {
 
 .btn-light:hover {
   background-color: var(--primary-color);
+}
+
+@media (max-width: 992px) {
+  p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 576px) {
+  p {
+    font-size: 14px;
+  }
 }
