--- a/components/messenger.html
+++ b/components/messenger.html
@@ -2,9 +2,7 @@
 <div
   class="modal fade"
   id="messengerModal"
-  tabindex="-1"
   aria-labelledby="messengerModalLabel"
-  aria-hidden="true"
 >
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -23,7 +21,7 @@
         </ul>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
           Đóng
         </button>
       </div>
