--- a/style/home.css
+++ b/style/home.css
@@ -1,3 +1,5 @@
+@import "./variables.css";
+
 /* Rocket Animation */
 .rocket-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
