--- a/style/layout.css
+++ b/style/layout.css
@@ -12,10 +12,10 @@
 
 .menu-dropdown,
 .signIn-btn {
+  height: 40px;
   background-color: var(--primary-color);
   color: white;
   border: none;
-  width: fit-content;
   padding: 10px 20px;
   font-weight: bold;
   border-radius: 5px;
