--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,9 @@
 <header
   class="header container-fluid bg-light shadow-sm d-flex align-items-center justify-content-between"
 >
-  <div class="container d-flex justify-content-between align-items-center">
+  <div
+    class="container-fluid d-flex justify-content-between align-items-center"
+  >
     <!-- Logo -->
     <div class="logo-container">
       <a
@@ -15,7 +17,12 @@
           width="50"
           height="50"
         />
-        <h1 class="fw-bold" style="color: var(--primary-color)">Risk Chance</h1>
+        <h1
+          class="fw-bold d-none d-sm-block"
+          style="color: var(--primary-color)"
+        >
+          Risk Chance
+        </h1>
       </a>
     </div>
 
@@ -181,15 +188,48 @@
         <button class="btn btn-primary fw-bold">Dashboard</button>
       </div>
 
+      <!-- Thong tin ca nhan -->
       <div
         class="account-container d-flex align-items-center justify-content-center"
       >
-        <a
+        <!-- Nếu chưa đăng nhập -->
+        <!-- <a
+          id="signInBtn"
           class="signIn-btn text-white fw-bold btn btn-primary d-flex align-items-center justify-content-center"
           href="../page/login.html"
         >
           Sign In
-        </a>
+        </a> -->
+
+        <!-- Nếu đã đăng nhập -->
+        <div id="userDropdown" class="dropdown">
+          <button
+            class="btn dropdown-toggle d-flex align-items-center"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <img
+              id="userAvatar"
+              src="../assets/user/tri lor.jpg"
+              alt="User Avatar"
+              class="user-img rounded-circle me-2"
+            />
+            <span id="userName" class="d-none d-md-block">User Name</span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li>
+              <a class="dropdown-item" href="../page/profile.html">
+                <i class="fa-solid fa-user me-2"></i> Profile
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item text-danger" href="../page/login.html">
+                <i class="fa-solid fa-sign-out-alt me-2"></i> Logout
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
