--- a/style/layout.css
+++ b/style/layout.css
@@ -97,6 +97,13 @@
   padding: 20px;
 }
 
+.user-img {
+  width: 50px;
+  height: 50px;
+  background-color: var(--primary-color);
+  object-fit: cover;
+}
+
 /* !Footer */
 footer {
   background-color: var(--background-dark);
