--- a/style/news.css
+++ b/style/news.css
@@ -1,8 +1,8 @@
-main {
+/* main {
   background-color: var(--background-color);
   border-radius: 10px;
   box-shadow: 5px 5px 20px 3px var(--shadow-dark);
-}
+} */
 
 .main-container {
   width: 95%;
