Add profile page, enhance startup display, and improve layout and styling across various components

--- a/components/detailBox.html
+++ b/components/detailBox.html
@@ -1,6 +1,8 @@
 <div id="startupSidebar" class="startup-sidebar">
   <div class="modal-header sticky-top mb-2">
-    <h4 id="startup-name" class="h4 modal-title fw-bold">Name</h4>
+    <a href="#" class="text-decoration-none"
+      ><h4 id="startup-name" class="h4 modal-title fw-bold">Name</h4></a
+    >
     <button
       type="button"
       class="btn-close"
@@ -17,51 +19,27 @@
       alt="anh nen"
     />
     <div class="modal-content">
-      <p id="startup-field">Field</p>
-      <p id="startup-goal">Goal</p>
-      <p id="share-percent">Cổ phần</p>
-      <p id="startup-description" class="text-justify">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non reiciendis
-        voluptates itaque eveniet unde aliquid provident dolore voluptatibus eum
-        praesentium explicabo quae doloribus excepturi laborum, enim libero vero
-        laboriosam ab. Dicta, beatae? Nam, totam. Impedit a aperiam voluptas
-        nostrum blanditiis nam inventore assumenda commodi ipsum, neque
-        repellendus, rerum adipisci animi dignissimos est modi aliquid vero
-        voluptatibus placeat! Consequuntur, consequatur. Veniam! Omnis nulla
-        esse quod laboriosam minima laudantium necessitatibus ipsam nesciunt
-        sequi, aliquam voluptas quos placeat et? Excepturi magnam quasi enim,
-        autem voluptatum suscipit quia minus quis eos beatae sapiente
-        doloremque. Deleniti reiciendis non unde, iure distinctio dignissimos
-        ullam quae ut, repellat consectetur corporis temporibus est odio officia
-        pariatur qui rerum cupiditate dolore incidunt molestias. Enim
-        necessitatibus ut quas veniam nemo? Laborum ea tempora cumque tenetur
-        eum vitae dolor beatae architecto minima? Vel totam mollitia tempora
-        magnam voluptates. Ullam doloribus itaque, cupiditate corporis
-        dignissimos, ab temporibus similique impedit aliquid illo velit.
-        Recusandae maiores non iste est vel amet nostrum doloribus saepe
-        consectetur similique, ut nisi esse dolores magnam at atque nesciunt
-        expedita animi minus debitis. Modi aliquid commodi eligendi quia sed?
-        Asperiores rerum at reiciendis, quidem ullam aspernatur delectus quas
-        expedita odit provident atque maiores tenetur quisquam, beatae possimus
-        illum vitae iure iusto! Commodi magni consequatur quos illum, excepturi
-        aut quidem. Consectetur inventore, nobis at porro maxime dolorem.
-        Eveniet nemo voluptas excepturi, maxime rem reprehenderit dignissimos,
-        iusto repellendus consequatur minus id sit, porro dolores numquam
-        quisquam reiciendis voluptates veniam libero nulla? Ducimus, minus atque
-        esse tenetur facere doloribus earum quod sequi ratione illum hic dolores
-        odit quidem tempora eius aperiam, perspiciatis necessitatibus libero
-        debitis ex. Aut, aliquam voluptas. Eum, cumque rerum. Fugiat, soluta.
-        Iste, repudiandae. Aliquam corporis culpa a quae dolorem, explicabo
-        quisquam eligendi quis illo eaque hic veritatis! Asperiores recusandae
-        officia sit cumque nesciunt similique doloribus sint explicabo eius
-        quidem.
-      </p>
+      <p>Lĩnh vực:</p>
+      <p>Tiến độ đầu tư:</p>
+      <div class="progress mb-2">
+        <div class="progress-bar" style="width: 70%"></div>
+      </div>
+      <p>Mô tả:</p>
+      <div class="description-container text-justify mb-3 mx-auto">
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+          reprehenderit fuga sint ea cum. Consequatur. Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Illo fugiat sunt architecto
+          adipisci veniam ipsam sapiente quae excepturi totam, est sequi iure.
+          Quibusdam ducimus deserunt dolore id nobis. Vero, molestiae?
+        </p>
+      </div>
       <p>Date</p>
     </div>
   </div>
 
   <div class="modal-feature mt-3 d-flex">
-    <button class="btn btn-primary">Contact</button>
-    <button class="btn btn-success">Invest</button>
+    <button class="btn btn-primary fw-bold">Startup</button>
+    <button class="btn btn-success fw-bold">Invest</button>
   </div>
 </div>
