--- a/style/createStartup.css
+++ b/style/createStartup.css
@@ -1,8 +1,13 @@
-/* Hien thi anh */
-#logoPreview {
-  width: 50%;
+.create-container {
+  width: 90%;
 }
 
+/* Hien thi anh */
+#logoPreview {
+  width: 40%;
+}
+
+/* Cac nut trong form */
 .submit-btn i {
   transform: translate(-5px, 5px);
   transition: transform 0.3s ease-in-out, margin-right 0.3s ease-in-out;
@@ -24,4 +29,21 @@
 
 #prevStep:hover i {
   transform: translateX(-5px);
+}
+
+/* Startup Information */
+.startup-info {
+  width: 50%;
+}
+
+.startup-info .logo-img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+/* document list */
+.document-list-container .table tbody tr:hover td {
+  background-color: var(--primary-hover);
+  color: var(--text-light);
 }
