--- a/components/footer.html
+++ b/components/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <!-- Cột 1: Logo & Giới thiệu -->
       <div class="col-md-4">
-        <h5>Về chúng tôi</h5>
+        <h5>About Us</h5>
         <p>
           Chúng tôi cung cấp nền tảng giúp các startup kết nối với nhà đầu tư
           một cách nhanh chóng và hiệu quả.
@@ -14,35 +14,27 @@
       </div>
 
       <!-- Cột 2: Điều hướng nhanh -->
-      <div class="col-md-2">
-        <h5>Liên kết</h5>
+      <div class="col-md-3">
+        <h5>Member</h5>
         <ul class="list-unstyled">
-          <li>
-            <a href="#" class="text-white text-decoration-none">Trang chủ</a>
-          </li>
-          <li>
-            <a href="#" class="text-white text-decoration-none">Startup</a>
-          </li>
-          <li>
-            <a href="#" class="text-white text-decoration-none">Tin tức</a>
-          </li>
-          <li>
-            <a href="#" class="text-white text-decoration-none">Liên hệ</a>
-          </li>
+          <li>Huỳnh Minh Trí</li>
+          <li>Nguyễn Thiện TríTrí</li>
+          <li>Trần Thanh Thùy</li>
+          <li>Trương Thị Tuyết Nhi</li>
         </ul>
       </div>
 
       <!-- Cột 3: Liên hệ -->
       <div class="col-md-3">
-        <h5>Liên hệ</h5>
+        <h5>Contact</h5>
         <p>Email: RiskChance@gmail.com</p>
-        <p>Điện thoại: +84 123 456 789</p>
-        <p>Địa chỉ: 123 Đường ABC, TP.HCM</p>
+        <p>Phone: +84 123 456 789</p>
+        <p>Address: 123 Đường ABC, TP.HCM</p>
       </div>
 
       <!-- Cột 4: Mạng xã hội -->
-      <div class="col-md-3">
-        <h5>Theo dõi chúng tôi</h5>
+      <div class="col-md-2">
+        <h5>Follow Us</h5>
         <a href="#" class="text-white me-3"
           ><i class="fa-brands fa-facebook"></i
         ></a>
