Add messenger component with draggable modal, user list, and chat functionality; enhance profile image upload and adjust layout styles

--- a/components/header.html
+++ b/components/header.html
@@ -204,7 +204,7 @@
         <!-- Nếu đã đăng nhập -->
         <div id="userDropdown" class="dropdown">
           <button
-            class="btn dropdown-toggle d-flex align-items-center"
+            class="account-dropdown btn dropdown-toggle d-flex align-items-center"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -217,7 +217,7 @@
             />
             <span id="userName" class="d-none d-md-block">User Name</span>
           </button>
-          <ul class="dropdown-menu dropdown-menu-end">
+          <ul class="account dropdown-menu dropdown-menu-end">
             <li>
               <a class="dropdown-item" href="../page/profile.html">
                 <i class="fa-solid fa-user me-2"></i> Profile
