Refactor news posting button to use anchor tag; enhance messenger chat box styling and functionality; add hashtag input and image preview features; improve profile and layout styles

--- a/components/header.html
+++ b/components/header.html
@@ -176,14 +176,43 @@
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none"
             ></span>
           </button>
-          <ul class="dropdown-menu dropdown-menu-end" id="notifDropdown">
-            <li><h5 class="h5 fw-bold">Thông báo</h5></li>
+          <ul class="dropdown-menu dropdown-menu-end mw-200" id="notifDropdown">
+            <h5 class="h5 fw-bold">Thông báo</h5>
+            <hr />
+
+            <div class="container-fluid notify-box d-flex align-items-center">
+              <div class="avatar-box d-none d-sm-block">
+                <img
+                  class="rounded-circle user-img"
+                  src="../assets/user/tri lor.jpg"
+                  alt=""
+                />
+              </div>
+
+              <div class="notify-content">
+                <p class="line-clamp-2">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
+                  culpa a ratione blanditiis dolor porro molestias aliquam?
+                  Temporibus a esse, fugiat similique eligendi ipsum soluta
+                  accusamus. Officiis, magnam? Voluptatibus, odit!
+                </p>
+                <p>Date:</p>
+              </div>
+
+              <div class="notify-status d-none d-sm-block">
+                <div class="status rounded-circle"></div>
+              </div>
+            </div>
           </ul>
         </div>
 
-        <button href="#" class="text-dark btn btn-light" id="postIcon">
+        <a
+          href="../page/postnew.html"
+          class="text-dark btn btn-light"
+          id="postIcon"
+        >
           <i class="fa-solid fa-pen fs-4"></i>
-        </button>
+        </a>
 
         <button class="btn btn-primary fw-bold">Dashboard</button>
       </div>
