--- a/components/messenger.html
+++ b/components/messenger.html
@@ -30,7 +30,9 @@
             />
             <ul class="nav flex-column" id="userList">
               <li class="nav-item">
-                <button class="nav-link"><p>Name user</p></button>
+                <button class="nav-link container-fluid">
+                  <p style="font-size: 14px">Name user</p>
+                </button>
               </li>
             </ul>
           </div>
@@ -54,18 +56,44 @@
               class="mess-container flex-grow-1 p-2 overflow-auto"
               id="chatBox"
             >
+              <!-- Tin nhắn của B (bên phải) -->
+              <div class="mess-box mb-2 receive d-flex justify-content-start">
+                <div class="p-2 bg-light rounded">
+                  <p>
+                    Tin nhắn bên B. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Odit quis odio minus ullam dicta, vero ab
+                    at? Reiciendis deleniti nostrum vel temporibus
+                    reprehenderit, quo aliquam voluptatum necessitatibus,
+                    delectus at tempore!
+                  </p>
+                </div>
+              </div>
+
+              <!-- Tin nhắn của A (bên trái) -->
+              <div class="mess-box mb-2 sender d-flex justify-content-end">
+                <div class="p-2 bg-primary text-white rounded">
+                  <p>Tin nhắn bên A</p>
+                </div>
+              </div>
+
               <p class="text-muted">Chưa có tin nhắn</p>
             </div>
             <!-- Ô nhập tin nhắn -->
             <div class="p-2 border-top">
               <div class="input-group">
-                <input
-                  type="text"
+                <textarea
                   class="form-control"
                   id="messageInput"
                   placeholder="Nhập tin nhắn..."
-                />
-                <button class="btn btn-primary" id="sendMessageBtn">Gửi</button>
+                  rows="1"
+                ></textarea>
+
+                <button class="btn btn-primary" id="sendMessageBtn">
+                  <i class="fa-solid fa-paper-plane"></i>
+                </button>
+                <button class="btn btn-success" id="sendMessageBtn">
+                  <i class="fa-solid fa-file-import"></i>
+                </button>
               </div>
             </div>
           </div>
