--- a/style/profile.css
+++ b/style/profile.css
@@ -1,3 +1,4 @@
+/* Profile */
 /* Avatar */
 #profileImage {
   width: 80px;
@@ -9,7 +10,7 @@
 /* Menu */
 .menu-container .nav-link {
   width: 100%;
-  color: var(--primary-hover) !important;
+  color: var(--primary-color) !important;
 }
 
 .menu-container .nav-link:hover {
@@ -21,4 +22,20 @@
   background-color: var(--primary-hover);
   color: var(--text-light) !important;
   font-weight: bold;
+}
+
+/* Dashboard */
+/* Founder */
+.startup-info-box {
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px 2px var(--shadow-light);
+  padding: 5px;
+}
+
+.logo-name-box .logo {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+  margin-right: 10px;
+  border: 1px solid var(--border-color);
 }
