--- a/components/detailBox.html
+++ b/components/detailBox.html
@@ -38,8 +38,12 @@
     </div>
   </div>
 
-  <div class="modal-feature mt-3 d-flex">
-    <button class="btn btn-primary fw-bold">Startup</button>
-    <button class="btn btn-success fw-bold">Invest</button>
+  <div class="modal-feature mt-3 d-flex justify-content-around">
+    <a
+      href="../page/detailStartup.html"
+      class="btn text-white btn-primary fw-bold"
+      >Startup</a
+    >
+    <a href="#" class="btn text-white btn-success fw-bold">Invest</a>
   </div>
 </div>
