--- a/components/detailBox.html
+++ b/components/detailBox.html
@@ -44,6 +44,8 @@
       class="btn text-white btn-primary fw-bold"
       >Startup</a
     >
-    <a href="#" class="btn text-white btn-success fw-bold">Invest</a>
+    <a href="../page/invest.html" class="btn text-white btn-success fw-bold"
+      >Invest</a
+    >
   </div>
 </div>
