Add contract page and user info component; implement styling for contract display and user card

--- a/components/detailBox.html
+++ b/components/detailBox.html
@@ -44,7 +44,9 @@
       class="btn text-white btn-primary fw-bold"
       >Startup</a
     >
-    <a href="../page/invest.html" class="btn text-white btn-success fw-bold"
+    <a
+      href="../page/detailStartup.html?id=1"
+      class="btn text-white btn-success fw-bold"
       >Invest</a
     >
   </div>
